# ai-image-app

./: CHANGELOG.md  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0001_v0_1_0_init.py
apps/api/: deps.py  main.py
apps/api/routers/: asset.py  health.py  intent.py  run.py  run_read.py
apps/api/schemas/: intent.py  read.py  run.py
apps/api/services/: asset_service.py  events.py  intent_service.py  orchestrator.py  queue.py  read_service.py  run_service.py
apps/worker/: executor.py  main.py  tasks.py
apps/worker/adapters/: mock_image.py
contracts/: lock.m0.1.json
docs/: contract_freeze.md  patches.md  publish_checklist.md  ra003_decisions.md
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
openapi/: openapi.v0.1.0.yaml  openapi.v0.1.2.yaml
scripts/: seed.py  smoke_e2e.py  static_audit.py  verify_contract_lock.py
tests/: test_health.py
